# gradient-sankey

./: .gitignore  CHANGELOG.md  README.md  gradient_sankey.py  pyproject.toml  requirements.txt  sankey_race_multi_layers_parallel.py
examples/: 01_hello_sankey.py  02_first_animation.py  03_themes.py  04_colors.py  05_real_company_data.py  06_background_music.py  README.md  company_financials.py  gallery.py  nvidia_dre.csv  nvidia_dre.py  nvidia_dre_wide.csv  render_nvidia_poc.py  render_nvidia_reel.py  us_energy_flow.py
examples/advanced/: README.md  company_financials.py  energy_flow.py  gallery.py  nvidia_reel.py  nvidia_sec_edgar.py
examples/data/: nvidia_dre.csv
notebooks/: 01_tutorial_nvidia_income.ipynb  02_tutorial_stablecoins.ipynb  04_tutorial_co2.ipynb  05_tutorial_ai_models.ipynb  06_tutorial_refugees.ipynb  07_tutorial_br_fiscal.ipynb  08_tutorial_olympics.ipynb  09_tutorial_bigtech_amazon.ipynb  12_tutorial_olympics_attribution.ipynb  README.md  build_gallery.py  gradient_sankey_gallery.ipynb  gradient_sankey_journey.ipynb
notebooks/builders/: build_gallery.py  build_journey.py  build_tutorial_ai_models.py  build_tutorial_alphabet.py  build_tutorial_bigtech_amazon.py  build_tutorial_br_fiscal.py  build_tutorial_co2.py  build_tutorial_energy.py  build_tutorial_nvidia_income.py  build_tutorial_olympics.py  build_tutorial_olympics_attribution.py  build_tutorial_refugees.py  build_tutorial_sport_dominance.py  build_tutorial_stablecoins.py
tests/: conftest.py  test_color_logic.py  test_palettes.py  test_positions.py  test_render_smoke.py  test_validation.py
